Moved library display code into it's own activity because it's simpler I guess.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="dvd_poster">Movie poster for DVD.</string>
     <string name="name_label">Library Name</string>
     <string name="library_status">DVD Status</string>
+    <string name="title_activity_libraries">Libraries</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
