--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="library_status">DVD Status</string>
     <string name="title_activity_libraries">Libraries</string>
     <string name="hello_world">Hello world!</string>
+    <string name="action_refresh">Refresh</string>
 
 </resources>
